--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.JopFinderApp" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:statusBarColor">@color/grey</item>
+        <item name="android:windowLightStatusBar">true</item>
         </style>
-
     <style name="Theme.JopFinderApp" parent="Base.Theme.JopFinderApp" />
 </resources>
